--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -146,7 +146,9 @@ Moving focus back to the Lyghtspeed login page, the web application can be succe
 
 ![authenticated.gif](/assets/images/htb/carrier/authenticated.gif)
 
-There are a couple of interesting things to note here. First, taking a closer look at the notes accessible from the "Tickets" page reveals some potentially useful information. The content of the juciest note is shown below.
+There are a couple of interesting things to note here. 
+
+1. Taking a closer look at the notes accessible from the "Tickets" page reveals some potentially useful information. The content of the juciest note is shown below.
 
 ```
 Rx / CastCom. IP Engineering team from one of our upstream ISP called to report a 
@@ -157,6 +159,10 @@ Updated: 2018/06/15: CastCom. still reporting issues with 3 networks: 10.120.15,
 important server in the 10.120.15.0/24 network, investigating... Updated 2018/06/16: No 
 prbl. found, suspect they had stuck routes after the leak and cleared them manually.
 ```
+
+This content does not seem extremely relevant at the moment, but it could come in handly later. The note suggets that there are some potential network routing issues and that there is an important FTP server in the `10.120.15.0/24` network. The fact that an upstream ISP is reporting that their routes are being "leaked" suggests that the Lyghtspeed ISP may be advertising routes incorrectly through BGP. Recall the diagram mentioned previously that represents three ISPs and their respective ASNs.
+
+2. 
 
 ## Root
 
