--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -222,6 +222,8 @@ After starting a listener on the attacking system with `nc -lp 4444` and passing
 
 ![r1_owned.gif](/assets/images/htb/carrier/r1_owned.gif)
 
+The `sh` shell can be upgraded using the Python shell upgrade technique as explained [here](https://mnorris.io/hackthebox/Curling/#shell_upgrade).
+
 As the `root` user of the remote system, the `user.txt` flag can be read.
 
 ```
@@ -230,6 +232,23 @@ As the `root` user of the remote system, the `user.txt` flag can be read.
 ```
 
 ## Root
+Before moving on, it is important to note a couple of things.
 
+1. The hostname of the current system is `r1`.
 
+```
+# hostname
+r1
+```
+
+2. There is no `root.txt` file on this system.
+
+```
+# find / -name root.txt 2> /dev/null
+# 
+```
+
+3. The `authorized_keys` file in the `/root/.ssh` directory contains two public keys; one for `ppacket@carrier` and one for `root@web`.
+
+4. 
 
