--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -145,7 +145,7 @@ After saving the changes and starting a `nc` listener on the attacking machine (
 ![wwwdata_shell.png](/assets/images/htb/curling/wwwdata_shell.png)
 
 The shell was upgraded using `python3 -c 'import pty;pty.spawn("/bin/bash")'` before moving on. This process can be accomplished by completing the following steps:
-
+<a name="shell_upgrade"></a> 
 1. On the target system, run `python3 -c 'import pty;pty.spawn("/bin/bash")'`
 2. Issue the `^Z` signal (`Ctrl` + `z`)
 3. On the attacking system, run `stty raw -echo; fg`
