--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -227,28 +227,32 @@ The `sh` shell can be upgraded using the Python shell upgrade technique as expla
 As the `root` user of the remote system, the `user.txt` flag can be read.
 
 ```
-# cat user.txt
+root@r1:~# cat user.txt
 5649c41d<redacted>
 ```
 
 ## Root
-Before moving on, it is important to note a couple of things.
+Before moving on, it is important to note a few things.
 
-1. The hostname of the current system is `r1`.
-
+* The hostname of the current system is `r1`.
 ```
-# hostname
+root@r1:~# hostname
 r1
 ```
-
-2. There is no `root.txt` file on this system.
-
+* There is no `root.txt` file on this system.
 ```
-# find / -name root.txt 2> /dev/null
-# 
+root@r1:~# find / -name root.txt 2> /dev/null
+root@r1:~# 
 ```
-
-3. The `authorized_keys` file in the `/root/.ssh` directory contains two public keys; one for `ppacket@carrier` and one for `root@web`.
-
-4. 
+* The `authorized_keys` file in the `/root/.ssh` directory contains two public keys; one for `ppacket@carrier` and one for `root@web`.
+* The machine has three network interfaces (excluding the loopback interface `lo`); `eth0: 10.99.64.2/24`, `eth1:  10.78.10.1/24`, and `eth2: 10.78.11.1/24`
+* The `arp` table includes IP addresses in all of the networks listed above
+```
+root@r1:~# arp
+Address                  HWtype  HWaddress           Flags Mask            Iface
+10.78.10.2               ether   00:16:3e:5b:49:a9   C                     eth1
+10.78.11.2               ether   00:16:3e:c4:fa:83   C                     eth2
+10.99.64.1               ether   fe:61:89:cd:3b:4f   C                     eth0
+10.99.64.251             ether   00:16:3e:f3:92:14   C                     eth0
+```
 
