--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -246,7 +246,7 @@ root@r1:~#
 ```
 * The `authorized_keys` file in the `/root/.ssh` directory contains two public keys; one for `ppacket@carrier` and one for `root@web`.
 * The machine has three network interfaces (excluding the loopback interface `lo`); `eth0: 10.99.64.2/24`, `eth1:  10.78.10.1/24`, and `eth2: 10.78.11.1/24`
-* The `arp` table includes IP addresses in all of the networks listed above
+* The `arp` table includes IP addresses from all of the networks listed above
 ```
 root@r1:~# arp
 Address                  HWtype  HWaddress           Flags Mask            Iface
@@ -255,4 +255,6 @@ Address                  HWtype  HWaddress           Flags Mask            Iface
 10.99.64.1               ether   fe:61:89:cd:3b:4f   C                     eth0
 10.99.64.251             ether   00:16:3e:f3:92:14   C                     eth0
 ```
+
+
 
