--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -264,6 +264,47 @@ Moving on, the attacking system's public SSH key can be copied to the `authorize
 4. Issue `ssh root@locahost -p 2222` to connect to the SSH service on port 22 of `r1`
 5. Enjoy the fully interactive terminal session
 
+With a strong, established foothold on `r1`, enumeration eventually led to the discovery of the various `quagga` suite configuration files present within the `/etc/quagga` directory. 
+
+```
+root@r1:/etc/quagga# ls -lah
+total 32K
+drwxrwxr-x 1 quagga quaggavty  186 Jul  2  2018 .
+drwxr-xr-x 1 root   root      3.0K Dec 24 21:34 ..
+-rw-r----- 1 quagga quagga     410 Dec 24 21:50 bgpd.conf
+-rw-r----- 1 root   root       410 Jul  2  2018 bgpd.conf.orig
+-rw-r----- 1 quagga quagga     264 Jul  2  2018 bgpd.conf.sav
+-rw-r----- 1 quagga quagga     992 Jul  1  2018 daemons
+-rw-r----- 1 quagga quagga     945 Feb  8  2018 debian.conf
+-rw-r----- 1 quagga quagga     289 Dec 24 21:50 zebra.conf
+-rw-r----- 1 root   root       289 Jul  2  2018 zebra.conf.orig
+-rw-r----- 1 quagga quagga     326 Jul  2  2018 zebra.conf.sav
+```
+
+Of particular interest is the `bgpd.conf` file, the contents of which are shown below.
+
+```
+!
+! Zebra configuration saved from vty
+!   2018/07/02 02:14:27
+!
+route-map to-as200 permit 10
+route-map to-as300 permit 10
+!
+router bgp 100
+ bgp router-id 10.255.255.1
+ network 10.101.8.0/21
+ network 10.101.16.0/21
+ redistribute connected
+ neighbor 10.78.10.2 remote-as 200
+ neighbor 10.78.11.2 remote-as 300
+ neighbor 10.78.10.2 route-map to-as200 out
+ neighbor 10.78.11.2 route-map to-as300 out
+!
+line vty
+!
+```
+
 
 
 
