--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -6,6 +6,8 @@ tags: [HackTheBox, HTB, Linux, ]
 header:
     teaser: "/assets/images/htb/carrier/carrier.png"
 ---
+On average, Carrier is a medium-difficulty Linux box. With this being said, the `user.txt` flag is likley a "tricky-but-easy" diffciculty whereas the `root.txt` flag is something like moderately-difficult. Carrier provides challengers with an overall unique experience. As mentioned previously, the `user.txt` flag is relatively straight forward. Some lazy administration paired with some publicly-accessible information on the web server allows for an initial foothold. The lack of sanitization leads to `root` access to the first system. That's right, there are multiple players in this game. For the `root.txt` flag, a [BGP hijacking](https://en.wikipedia.org/wiki/BGP_hijacking) attack must be carried out. This tutorial aims to include the information in itself to explain the basics of the BGP routing protocol as well as to outline the (somehwat unique) path of attack to obtain the `root.txt` flag.
+
 ![carrier_info.png](/assets/images/htb/carrier/carrier_info.png)
 
 *Note: I completed this challenge on January 12th, 2019, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
@@ -106,6 +108,7 @@ A variety of directories were discovered by `gobuster` shortly after the scan wa
 Enumerating these directories further revealed some interesting information. The `/img` directory is where the "Lyghtspeed" logo is stored and the `/tools` directory contains a `remote.php` file which suggests that the web server runs PHP code. The most interesting directory is `/doc` which contains two files; `diagram_for_tac.png` and `error_codes.pdf`.
 
 The `diagram_for_tac.png` is a diagram that represents three routers that appear to belong to three different companies (perhaps ISPs); `Lyghtspeed Networks`, `Zaza Telecom`, and `CastCom`. Additionally, the diagram includes autonomous system numbers, or AS numbers for each company. As part of the Border Gateway Protocol (BGP) routing protocol, ASNs are used to uniquely identify each network on the internet. 
+
 <a id="isp_diagram"><a>
 ![isp_diagram.png](/assets/images/htb/carrier/isp_diagram.png)
 
@@ -413,7 +416,7 @@ Now, a `nc` listener was set up that will listen for incoming connections on TCP
 root@r1:~# nc -l 10.120.15.10 21
 ```
 
-Eventually, a connection is received. By mimicking the return codes of an FTP server, the following exchange was made with the FTP client. The lines ending with the `*` character mark the mimicked FTP server codes that were manually sent in response to the client's requests.
+Eventually, a connection is received. By mimicking the return codes of an FTP server, the following exchange was made with the FTP client. The lines ending with the `*` characters mark the mimicked FTP server codes that were manually sent in response to the client's requests.
 
 ```
 USER root
@@ -422,11 +425,11 @@ PASS BGPtelc0rout1ng
 227 Entering Passive Mode. (10,120,15,10,8,75).* 
 STOR secretdata.txt
 150 File status okay; about to open data connection.*
-*226 Closing data connection. Requested file action successful (for example, file transfer or file abort).*
+226 Closing data connection. Requested file action successful (for example, file transfer or file abort).*
 QUIT
 ```
 
-Only the return code numbers need to be sent for the interaction to take place, but the text offers an explanation for the return code. Note that the `227 Entering Passive Mode` return code specifies an IP address and port for data transfer in the form of (h1,h2,h3,h4,p1,p2). The value in the code above correlates to `10.120.15.10:2123`. In order for the data transfer to successed, an additional `nc` listener needs to be set up on port 2123.
+Only the return code numbers need to be sent for the interaction to take place, but the text offers an explanation for the return code. Note that the `227 Entering Passive Mode` return code specifies an IP address and port for data transfer in the form of (h1,h2,h3,h4,p1,p2). The value in the code above correlates to `10.120.15.10:2123`. In order for the data transfer to successed, an additional `nc` listener needs to be set up on port 2123 before the `227` code sent to the client. This process is shown below.
 
 ```
 root@r1:~# nc -lvp 2123
@@ -442,15 +445,15 @@ The transferred `secretdata.txt` file contains the value shown below, and seems 
 56484a766247786c5a43456849513d3d
 ```
 
-Using the username `root` and the password `BGPtelc0rout1ng` as received in the FTP server enables SSH access to the `10.120.15.10` server once the original routing for the `10.120.15.0/24` network is restored.
+Using the username `root` and the password `BGPtelc0rout1ng` as received from the FTP server/client exchange allows for SSH access to the `10.120.15.10` server once the original routing for the `10.120.15.0/24` network is restored.
 
-To restore the original routing, is the commands below on `r1`:
+To restore the original routing, issue the commands below on `r1`:
 
 1. `ifconfig lo:1 127.0.0.2`
 2. `ip route del 10.120.15.10 dev lo`
 3. `ip route add 10.120.15.0/24 via 10.78.11.2 dev eth2`
 
-After the SSH connection to `10.120.15.10` (hostname `carrier`) is made, the `root.txt` flag can be read.
+After the SSH connection to `10.120.15.10` (hostname, `carrier`) is made, the `root.txt` flag can be read.
 
 ```
 root@carrier:~# cat root.txt
