--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -457,5 +457,5 @@ After the SSH connection to `10.120.15.10` (hostname, `carrier`) is made, the `r
 
 ```
 root@carrier:~# cat root.txt
-2832e552061532250ac2a21478fd4866
+2832e552<redacted>
 ```
