--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -150,7 +150,7 @@ root@kali:~/workspace/hackthebox/Carrier# openssl s_client -crlf -connect 10.10.
 
 Once connected, the credentials found previously can be used to authenticate to the service.
 
-*Note: When interacting with the IMAP service, a string of characters must be included before each user-issued IMAP command. The string of characters serves to identify transactions within the protocol. In the following examples, the `HTB` string will be used as the IMAP transaction ID.*
+*Note: When interacting with the IMAP service, a string of characters must be included before each user-issued IMAP command. The string of characters serves to identify transactions within the protocol. In the following examples, the "HTB" string will be used as the IMAP transaction ID.*
 
 ```
 HTB LOGIN ayush jiujitsu
@@ -200,7 +200,7 @@ User-Agent: Roundcube Webmail/1.3.8
 HTB OK Fetch completed (0.002 + 0.000 + 0.001 secs).
 ```
 
-*Note: The `webmail.chaos.htb` subdomain is present in the `Message-ID` line within the header above. The Roundcube Webmail page can be accessed through `http://webmail.chaos.htb` after adding `10.10.10.120 webmail.chaos.htb` to the `/etc/hosts` file.*
+*Note: The "webmail.chaos.htb" subdomain is present in the "Message-ID" line within the header above. The Roundcube Webmail page can be accessed through "http://webmail.chaos.htb" after adding "10.10.10.120 webmail.chaos.htb" to the "/etc/hosts" file.*
 
 To see what sort of information is present within the body of the email, another `FETCH` command was used.
 
@@ -263,7 +263,7 @@ c3QoKQoK)
 HTB OK Fetch completed (0.001 + 0.000 secs).
 ```
 
-*Note: The entire email message could be read in one command using `HTB FETCH 1 BODY[]`*
+*Note: The entire email message could be read in one command using "HTB FETCH 1 BODY[]"*
 
 After transferring the base64 encoded text to two separate files on the attacking system and removing the newline characters as well as the `)` character that terminates each base64 encoded string, the contents can be decoded using the `base64 -d` command.
 
@@ -271,7 +271,7 @@ After transferring the base64 encoded text to two separate files on the attackin
 root@kali:~/workspace/hackthebox/Chaos# base64 -d enim_msg.b64 > enim_msg.txt; base64 -d en.b64 > en.py
 ```
 
-The data within `enim_msg.txt` is encrypted, and therefore is unintelligble. The email message from `ayush` mentions that `enim_msg.txt` was encrypted by the `en.py` "program" which is shown below.
+The data within `enim_msg.txt` is encrypted, and therefore is unintelligble. The email message from `Ayush` mentions that `enim_msg.txt` was encrypted by the `en.py` program which is shown below.
 
 ```python
 def encrypt(key, filename):
@@ -301,6 +301,7 @@ def getKey(password):
             hasher = SHA256.new(password.encode('utf-8'))
             return hasher.digest()
 ```
+
 
 
 
