working on chaos

--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -111,7 +111,7 @@ This error suggests that:
 The following command was issued on the testing system to map the `10.10.10.120` IP address to the domain name `chaos.htb`.
 
 ```
-root@kali:~/workspace/hackthebox/Carrier# echo "10.10.10.120 chaos.htb" >> /etc/hosts
+root@kali:~/workspace/hackthebox/Chaos# echo "10.10.10.120 chaos.htb" >> /etc/hosts
 ```
 
 Now, browsing to `http://chaos.htb` loads a basic website. 
@@ -121,7 +121,7 @@ Now, browsing to `http://chaos.htb` loads a basic website.
 A `gobuster` scan was run against `http://chaos.htb` and against `http://10.10.10.120` to enumerate directories available via the website. The example for `http://10.10.10.120` is shown below.
 
 ```
-root@kali:~/workspace/hackthebox/Carrier# gobuster dir -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt -u http://10.10.10.120
+root@kali:~/workspace/hackthebox/Chaos# gobuster dir -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt -u http://10.10.10.120
 ```
 
 The above scan quickly discovers the `/wp` directory. This suggests the website was built with the Wordpress CMS.
@@ -145,7 +145,7 @@ password – jiujitsu
 Looking back to the `nmap` scan, it can be seen that the open source IMAP and POP3 email server Dovecot is in use on the system (specifically on ports 143, 993, and 995). The `openssl` Linux tool was used to interact with the SSL-encrypted Dovecot service listening on TCP 993. In this case, authentication was not allowed using `telnet 10.10.10.120 143` over the unencrypted Dovecot IMAP service on port 143.
 
 ```
-root@kali:~/workspace/hackthebox/Carrier# openssl s_client -crlf -connect 10.10.10.120:993
+root@kali:~/workspace/hackthebox/Chaos# openssl s_client -crlf -connect 10.10.10.120:993
 ```
 
 Once connected, the credentials found previously can be used to authenticate to the service.
@@ -302,10 +302,73 @@ def getKey(password):
             return hasher.digest()
 ```
 
+At this point, there are a few important pieces of information that will be key in reversing the encryption process:
 
+1. The `filesize` variable
+The `filesize` variable is simply the size in bytes of the to-be-encrypted file prepended with zeroes so that the variable is 16 bytes long. For example, a file that is 39 bytes in size will result in the `filesize` variable being `0000000000000039`
 
+2. The `IV` variable
+The `IV` variable is used as the [initialization vector](https://en.wikipedia.org/wiki/Initialization_vector) for data encryption. Its value will be the first 16 bytes of a file object, as created by `Random.new()` from the `Crypto.Random` Python package.
 
+3. The `encryptor` variable
+This variable shows that [AES](https://en.wikipedia.org/wiki/Advanced_Encryption_Standard) encryption was used in CBC mode. The same should be used during decryption.
 
+4. The `with open(outputFile, 'wb') as outfile:` line and the two lines following it
+These lines show that the `filesize` variable (16 bytes) and the `IV` variable (also 16 bytes) are written to the output file (i.e. `enim_msg.txt`) before any encrypted data is written. As the `IV` was used in the `encryptor` variable, the same `IV` will need to be used during decryption. 
+
+This means that the first 32 bytes of any file encrypted by this program are not encrypted. This is to say that the 33rd byte of any file encrypted by this program is always the first byte that needs to be decrypted. The first 16 bytes are the filesize padded with zeroes, and the next 16 bytes are the `IV`.
+
+5. The encryption/decryption key is known to be `sahay`
+AES is a symmetric-key algorithm which means that the same key is used for encrypting and decrypting data.
+
+Using this information, the following decryption program was written.
+
+```python
+#!/usr/bin/python3
+from Crypto.Cipher import AES
+from Crypto import Random
+from Crypto.Hash import SHA256
+
+# reused from encryption program
+def getKey(password):
+    hasher = SHA256.new(password.encode('utf-8'))
+    return hasher.digest()
+
+# opens enim_msg.txt in binary mode
+with open('enim_msg.txt', mode='rb') as f:
+    msg = f.read()
+
+filesize = msg[:16] # don't care about this
+IV = msg[16:32]
+decrypt_me = msg[32:]
+key = getKey('sahay')
+decryptor = AES.new(key, AES.MODE_CBC, IV)
+result = decryptor.decrypt(decrypt_me).strip()
+
+print(result.decode())
+```
+
+Running the above program (with `enim_msg.txt` in the same directory as the program) results in the following:
+
+```
+root@kali:~/workspace/hackthebox/Chaos# python3 decrypt.py 
+SGlpIFNhaGF5CgpQbGVhc2UgY2hlY2sgb3VyIG5ldyBzZXJ2aWNlIHdoaWNoIGNyZWF0ZSBwZGYKCnAucyAtIEFzIHlvdSB0b2xkIG1lIHRvIGVuY3J5cHQgaW1wb3J0YW50IG1zZywgaSBkaWQgOikKCmh0dHA6Ly9jaGFvcy5odGIvSjAwX3cxbGxfZjFOZF9uMDdIMW45X0gzcjMKClRoYW5rcywKQXl1c2gK
+```
+
+This appears to be base64 encoded. Saving the above output and using `base64` to decode the data reveals the message shown below:
+
+```
+Hii Sahay
+
+Please check our new service which create pdf
+
+p.s - As you told me to encrypt important msg, i did :)
+
+http://chaos.htb/J00_w1ll_f1Nd_n07H1n9_H3r3
+
+Thanks,
+Ayush
+```
 
 ## Root
 
