--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -305,25 +305,23 @@ def getKey(password):
 At this point, there are a few important pieces of information that will be key in reversing the encryption process:
 
 1. The `filesize` variable
+2. The `IV` variable
+3. The `encryptor` variable
+4. The `with open(outputFile, 'wb') as outfile:` line and the two lines following it
+5. The encryption/decryption key is known to be `sahay`
+
 
 The `filesize` variable is simply the size in bytes of the to-be-encrypted file prepended with zeroes so that the variable is 16 bytes long. For example, a file that is 39 bytes in size will result in the `filesize` variable being `0000000000000039`
 
-2. The `IV` variable
-
 The `IV` variable is used as the [initialization vector](https://en.wikipedia.org/wiki/Initialization_vector) for data encryption. Its value will be the first 16 bytes of a file object, as created by `Random.new()` from the `Crypto.Random` Python package.
 
-3. The `encryptor` variable
+The `encryptor` variable shows that [AES](https://en.wikipedia.org/wiki/Advanced_Encryption_Standard) encryption was used in CBC mode. The same should be used during decryption.
 
-This variable shows that [AES](https://en.wikipedia.org/wiki/Advanced_Encryption_Standard) encryption was used in CBC mode. The same should be used during decryption.
-
-4. The `with open(outputFile, 'wb') as outfile:` line and the two lines following it
-
-These lines show that the `filesize` variable (16 bytes) and the `IV` variable (also 16 bytes) are written to the output file (i.e. `enim_msg.txt`) before any encrypted data is written. As the `IV` was used in the `encryptor` variable, the same `IV` will need to be used during decryption. 
+The `with open(outputFile, 'wb') as outfile:` and the two lines following show that the `filesize` variable (16 bytes) and the `IV` variable (also 16 bytes) are written to the output file (i.e. `enim_msg.txt`) before any encrypted data is written. As the `IV` was used in the `encryptor` variable, the same `IV` will need to be used during decryption. 
 
 This means that the first 32 bytes of any file encrypted by this program are not encrypted. This is to say that the 33rd byte of any file encrypted by this program is always the first byte that needs to be decrypted. The first 16 bytes are the filesize padded with zeroes, and the next 16 bytes are the `IV`.
 
-5. The encryption/decryption key is known to be `sahay`
-AES is a symmetric-key algorithm which means that the same key is used for encrypting and decrypting data.
+The fact that the encryption/decryption key is known to be `sahay` is relevant because AES is a symmetric-key algorithm which means that the same key is used for encrypting and decrypting data.
 
 Using this information, the following decryption program was written.
 
@@ -431,7 +429,8 @@ ayush@chaos:/$ echo $SHELL
 
 An additional error message is received when attempting to run commands with `/` in them (or any command that isn't in set within the `ayush` user's PATH variable):
 
-```ayush@chaos:/$ ls
+```
+ayush@chaos:/$ ls
 rbash: /usr/lib/command-not-found: restricted: cannot specify `/' in command names
 ayush@chaos:/$ echo $PATH
 /home/ayush/.app
@@ -446,7 +445,7 @@ ayush@chaos:/$ echo /home/ayush/.app/*
 
 This shows that the `ayush` user is only allowed to run `dir`, `ping`, and `tar`.
 
- Note that previously the command `su --login ayush` was issued when switching from the `www-data` user to the `ayush` user. Using the `su` command along with `-`, `l`, or `--login` (they all do the same thing) will (from `man su`) "start the shell as a login shell with an environment similar to a real login." Logging in as the `ayush` user in this way allows for a simple escape from the `rbash` shell. A new PATH variable was exported, escaping the `ayush` user from the restricted shell.
+Note that previously the command `su --login ayush` was issued when switching from the `www-data` user to the `ayush` user. Using the `su` command along with `-`, `l`, or `--login` (they all do the same thing) will (from `man su`) "start the shell as a login shell with an environment similar to a real login." Logging in as the `ayush` user in this way allows for a simple escape from the `rbash` shell. A new PATH variable was exported, escaping the `ayush` user from the restricted shell.
 
  ```
 ayush@chaos:~$ export PATH=/bin:/usr/bin/:$PATH
