--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -462,3 +462,62 @@ eef39126<redacted>
 ```
 
 ## Root
+The route to privilege escalation lies within the hidden `.mozilla` directory. in `/home/ayush`. In the `~/.mozilla/firefox/bzo7sjt1.default` directory there is a `logins.json` file, the contents of which is shown below.
+
+```
+{"nextId":3,"logins":[{"id":2,"hostname":"https://chaos.htb:10000","httpRealm":null,"formSubmitURL":"https://chaos.htb:10000","usernameField":"user","passwordField":"pass","encryptedUsername":"MDIEEPgAAAAAAAAAAAAAAAAAAAEwFAYIKoZIhvcNAwcECDSAazrlUMZFBAhbsMDAlL9iaw==","encryptedPassword":"MDoEEPgAAAAAAAAAAAAAAAAAAAEwFAYIKoZIhvcNAwcECNx7bW1TuuCuBBAP8YwnxCZH0+pLo6cJJxnb","guid":"{cb6cd202-0ff8-4de5-85df-e0b8a0f18778}","encType":1,"timeCreated":1540642202692,"timeLastUsed":1540642202692,"timePasswordChanged":1540642202692,"timesUsed":1}],"disabledHosts":[],"version":2}
+```
+
+Note that the contents include references to the Webmin administrator portal located at `https://chaos.htb:10000`. The `logins.json` file also contains an `encryptedUsername` and an `encryptedPassword`. This appears to be a stored username and password for the Webmin login page. 
+
+From a Mozilla support [page](https://support.mozilla.org/en-US/kb/recovering-important-data-from-an-old-profile#w_passwords), it is mentioned that saved passwords are stored in two different files. The `key4.db` file stores the key database (an encryption key and master password) for the stored passwords and the `logins.json` file contains the stored, encrypted passwords.
+
+Upon locating the `key4.db` file (it's in the same directory as the `logins.json` file), the two files were transferred to the attacking system using Python's SimpleHTTPServer. To accomplish this, run `python -m SimpleHTTPServer 1234` on the target system. Then, open a browser and browse to `http://chaos.htb:1234`. From here, the files in the directory can be right clicked and downloaded using the "Save Link As..." option.
+
+With the two files in place, the following command was run on the attacking system:
+
+```
+root@kali:~/workspace/hackthebox/Chaos# firefox -no-remote -ProfileManager
+```
+
+This launches the Firefox Profile Manager tool that will be used to create a new profile that will use the `key4.db` file and the `logins.json` file from the target system.
+
+![firefox_profile.png](/assets/images/htb/chaos/firefox_profile.png)
+
+From this window, the "Create Profile" option was selected. Click through the prompts and name the new profile "Chaos" (or whatever else). The default folder created by the profile creation wizard will work fine, but make note of what it is (`/root/.mozilla/firefox/jhpwqwtd.Chaos/` in this exmaple). Click finish.
+
+Next, copy the `logins.json` file and the `key4.db` file to the directory created via the profile creation wizard.
+
+```
+root@kali:~/workspace/hackthebox/Chaos# cp logins.json key4.db /root/.mozilla/firefox/jhpwqwtd.Chaos/
+```
+
+At this point, choosing the newly created profile from the Firefox Profile Manager window and clicking "Start Firefox" will launch a new Firefox browser window using the selected profile.
+
+Browsing to the `https://chaos.htb:10000` URL results in the following:
+
+![master_pass.png](/assets/images/htb/chaos/master_pass.png)
+
+... If you had to guess the master password, would you guess `jiujitsu`?
+
+![webmin_login.gif](/assets/images/htb/chaos/webmin_login.gif)
+
+Once logged in, there are a variety of ways to access the system as the `root` user. The simplest way involves navigating to the "System" tab on the left side bar, clicking on it, and then selecting the "Change Passwords" option. From here, the password for any user can be changed.
+
+![change_pass.png](/assets/images/htb/chaos/change_pass.png)
+
+Back on the target system, the `su` command can be used once again to switch to the `root` user.
+
+```
+ayush@chaos:~$ su - root
+Password: 
+root@chaos:~# 
+```
+
+The `root.txt` flag can now be read.
+
+```
+root@chaos:~# cat root.txt
+4eca7e09<redacted>
+```
+
